samples/_failures_safe/1761668515_9f1b89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fda46054.c: In function ‘main’:
./samples/SAFE/__tmp_fda46054.c:149: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_fda46054.c:148:5: error: expected declaration or statement at end of input
  148 |     if
      |     ^~
